Add timestamp to lift status
Data timestamp (in millis) is a time of last successull status
retrieval.
Timestamp is now rendered as a part of resort section. It is also
returned by resort API.

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,11 @@
 extends layout
 
 mixin resort(resort)
-  section.resort(data-resort=resort.id, class=resort.open ? 'open' : '')
+  section.resort(
+    data-resort=resort.id,
+    data-timestamp=resort.timestamp,
+    class=resort.open ? 'open' : ''
+  )
     header
       a.left.icon-alone.resort-link(
         href=resort.href,
