--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -136,6 +136,10 @@ a
       text-shadow 1px 1px 2px rgba(0,0,0,.3)
       padding 2px
 
+.auto-refresh-reminder
+  font-style italic
+  float right
+
 .minimax
   padding-right 2px
 
