--- a/views/index.jade
+++ b/views/index.jade
@@ -30,6 +30,10 @@ mixin resort(resort)
           li
             span(class='ls-#{key}') &nbsp;#{value}&nbsp;
             span #{key}
+      .auto-refresh-reminder
+        span Next update in&nbsp;
+        span.time-to-refresh 70
+        span &nbsp;seconds
 
 
 block content
